{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 26,
  "lineage": "5c205c90-7ce4-5f2c-120c-59e88445d480",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "task16_wordpress_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a9a48ce4458e384e",
            "arn": "arn:aws:ec2:us-east-1:816069164153:instance/i-06973d89377636c0a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06973d89377636c0a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0844daae971f541e5",
            "private_dns": "ip-10-10-10-12.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.10.12",
            "public_dns": "ec2-54-87-187-16.compute-1.amazonaws.com",
            "public_ip": "54.87.187.16",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a7892f1f649436fa",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-091f177ec7562164b",
            "tags": {
              "Name": "task16-wordpress-ec2"
            },
            "tags_all": {
              "Name": "task16-wordpress-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02f7ba2007a1f71ee"
            ]
          },
          "dependencies": [
            "aws_db_instance.task16_wordpress_db",
            "aws_db_subnet_group.task16_db_subnets",
            "aws_security_group.task16_db_sg",
            "aws_security_group.task16_ec2_sg",
            "aws_sns_topic.task16_wordpress_sns",
            "aws_subnet.task16_private_subnet1",
            "aws_subnet.task16_private_subnet2",
            "aws_subnet.task16_public_subnet",
            "aws_vpc.task16_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "task16_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:816069164153:internet-gateway/igw-056db0235bafc1741",
            "id": "igw-056db0235bafc1741",
            "owner_id": "816069164153",
            "tags": {
              "Name": "task16-igw"
            },
            "tags_all": {
              "Name": "task16-igw"
            },
            "vpc_id": "vpc-07d5e4370f685a104"
          },
          "dependencies": [
            "aws_vpc.task16_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "task16_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:816069164153:loadbalancer/app/task16-alb/b9c60e58d3a73674",
            "arn_suffix": "app/task16-alb/b9c60e58d3a73674",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "task16-alb-788718598.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:816069164153:loadbalancer/app/task16-alb/b9c60e58d3a73674",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "task16-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-02f7ba2007a1f71ee"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05401415e14f62ee8"
              },
              {
                "subnet_id": "subnet-091f177ec7562164b"
              }
            ],
            "subnets": [
              "subnet-05401415e14f62ee8",
              "subnet-091f177ec7562164b"
            ],
            "tags": {
              "Name": "task16-alb"
            },
            "tags_all": {
              "Name": "task16-alb"
            },
            "vpc_id": "vpc-07d5e4370f685a104",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.task16_ec2_sg",
            "aws_subnet.task16_jump_subnet",
            "aws_subnet.task16_public_subnet",
            "aws_vpc.task16_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "task16_alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:816069164153:listener/app/task16-alb/b9c60e58d3a73674/b4a2c5f89206d72f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:816069164153:targetgroup/task16-alb-tg/fc6cd7ed58c09410",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:816069164153:listener/app/task16-alb/b9c60e58d3a73674/b4a2c5f89206d72f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:816069164153:loadbalancer/app/task16-alb/b9c60e58d3a73674",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.task16_alb",
            "aws_lb_target_group.task16_alb_tg",
            "aws_security_group.task16_ec2_sg",
            "aws_subnet.task16_jump_subnet",
            "aws_subnet.task16_public_subnet",
            "aws_vpc.task16_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "task16_alb_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:816069164153:targetgroup/task16-alb-tg/fc6cd7ed58c09410",
            "arn_suffix": "targetgroup/task16-alb-tg/fc6cd7ed58c09410",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:816069164153:targetgroup/task16-alb-tg/fc6cd7ed58c09410",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:816069164153:loadbalancer/app/task16-alb/b9c60e58d3a73674"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "task16-alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "task16-alb-tg"
            },
            "tags_all": {
              "Name": "task16-alb-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-07d5e4370f685a104"
          },
          "dependencies": [
            "aws_vpc.task16_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "task16_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:816069164153:route-table/rtb-0f15ab76ebf5221be",
            "id": "rtb-0f15ab76ebf5221be",
            "owner_id": "816069164153",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-056db0235bafc1741",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "task16-public-rt"
            },
            "tags_all": {
              "Name": "task16-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07d5e4370f685a104"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.task16_igw",
            "aws_vpc.task16_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "task16_jump_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-008c2f500e13582f4",
            "route_table_id": "rtb-0f15ab76ebf5221be",
            "subnet_id": "subnet-05401415e14f62ee8"
          },
          "dependencies": [
            "aws_internet_gateway.task16_igw",
            "aws_route_table.task16_public_rt",
            "aws_subnet.task16_jump_subnet",
            "aws_vpc.task16_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "task16_public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00d95d21c4331cbf0",
            "route_table_id": "rtb-0f15ab76ebf5221be",
            "subnet_id": "subnet-091f177ec7562164b"
          },
          "dependencies": [
            "aws_internet_gateway.task16_igw",
            "aws_route_table.task16_public_rt",
            "aws_subnet.task16_public_subnet",
            "aws_vpc.task16_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "task16_db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:816069164153:security-group/sg-09fa48eb8deac53c6",
            "description": "Allow MySQL access from the WordPress EC2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09fa48eb8deac53c6",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MySQL access from WordPress EC2",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02f7ba2007a1f71ee"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "task16-db-sg",
            "name_prefix": "",
            "owner_id": "816069164153",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07d5e4370f685a104"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.task16_ec2_sg",
            "aws_vpc.task16_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "task16_ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:816069164153:security-group/sg-02f7ba2007a1f71ee",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02f7ba2007a1f71ee",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.10.10.16/28"
                ],
                "description": "Allow SSH access from jump subnet",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "task16-ec2-sg",
            "name_prefix": "",
            "owner_id": "816069164153",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07d5e4370f685a104"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.task16_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "task16_jump_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:816069164153:subnet/subnet-05401415e14f62ee8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.10.16/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05401415e14f62ee8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "816069164153",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "task16-jump-subnet"
            },
            "tags_all": {
              "Name": "task16-jump-subnet"
            },
            "vpc_id": "vpc-07d5e4370f685a104"
          },
          "dependencies": [
            "aws_vpc.task16_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "task16_private_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:816069164153:subnet/subnet-039f482b41eabdb3c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.10.32/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-039f482b41eabdb3c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "816069164153",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "task16-private-subnet-1"
            },
            "tags_all": {
              "Name": "task16-private-subnet-1"
            },
            "vpc_id": "vpc-07d5e4370f685a104"
          },
          "dependencies": [
            "aws_vpc.task16_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "task16_private_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:816069164153:subnet/subnet-0bb1a9a5e2d2c99aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.10.48/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bb1a9a5e2d2c99aa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "816069164153",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "task16-private-subnet-2"
            },
            "tags_all": {
              "Name": "task16-private-subnet-2"
            },
            "vpc_id": "vpc-07d5e4370f685a104"
          },
          "dependencies": [
            "aws_vpc.task16_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "task16_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:816069164153:subnet/subnet-091f177ec7562164b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.10.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-091f177ec7562164b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "816069164153",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "task16-public-subnet"
            },
            "tags_all": {
              "Name": "task16-public-subnet"
            },
            "vpc_id": "vpc-07d5e4370f685a104"
          },
          "dependencies": [
            "aws_vpc.task16_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "task16_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:816069164153:vpc/vpc-07d5e4370f685a104",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.10.0/24",
            "default_network_acl_id": "acl-03c892037b4fcc11e",
            "default_route_table_id": "rtb-0a942b803ae217ebc",
            "default_security_group_id": "sg-01515e742e5921605",
            "dhcp_options_id": "dopt-00141fe49c93ae4b7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07d5e4370f685a104",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a942b803ae217ebc",
            "owner_id": "816069164153",
            "tags": {
              "Name": "task16-vpc"
            },
            "tags_all": {
              "Name": "task16-vpc"
            }
          }
        }
      ]
    }
  ]
}